--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "fse": "^4.0.1",
     "node-fetch": "^3.2.4",
     "yargs": "^17.3.1"
-    
+    "rimraf": "^3.0.2"
+    "fs-jetpack": "^4.3.1"    
   }
 }
